[gd_scene load_steps=9 format=3 uid="uid://bl30assw3y4mn"]

[ext_resource type="Texture2D" uid="uid://dbmhpb8fx6ss2" path="res://assets/background.jpeg" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://wglt524gwmet" path="res://assets/projeto enigma.png" id="1_wu84c"]
[ext_resource type="Script" uid="uid://dm0gsskdintec" path="res://scripts/main_menu/sound_handler.gd" id="2_wu84c"]
[ext_resource type="AudioStream" uid="uid://b6v0lb1b78cfc" path="res://assets/sounds/sfx/enigma_startup_sfx_r1.ogg" id="3_8ln24"]
[ext_resource type="Script" uid="uid://brf63k13b8u6p" path="res://scripts/main_menu/new_game_handler.gd" id="3_rtw2f"]
[ext_resource type="Script" uid="uid://cat5v86k6gaeu" path="res://scripts/main_menu/load_game_handler.gd" id="4_oa1go"]
[ext_resource type="AudioStream" uid="uid://d3kphgo4xvrud" path="res://assets/sounds/ost/main_theme_r1.ogg" id="4_rtw2f"]
[ext_resource type="Script" uid="uid://8q811jh6p7au" path="res://scripts/main_menu/settings_handler.gd" id="5_tbmy8"]

[node name="Main Menu" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
visible = false
position = Vector2(2, 13)
scale = Vector2(1.54229, 1.87636)
texture = ExtResource("1_l6cm7")

[node name="ProjetoEnigma" type="Sprite2D" parent="."]
position = Vector2(2, -804)
scale = Vector2(2.50667, 2.50667)
texture = ExtResource("1_wu84c")

[node name="MainVBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -496.0
offset_right = 496.0
offset_bottom = 1106.0
grow_horizontal = 2

[node name="New Game Button" type="Button" parent="MainVBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "NEW GAME"
script = ExtResource("3_rtw2f")

[node name="Load Game Button" type="Button" parent="MainVBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "LOAD GAME"
script = ExtResource("4_oa1go")

[node name="Settings Button" type="Button" parent="MainVBoxContainer" node_paths=PackedStringArray("settings_menu", "settings_back_button", "main_menu")]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "SETTINGS"
script = ExtResource("5_tbmy8")
settings_menu = NodePath("../../SettingsVBoxContainer")
settings_back_button = NodePath("../../SettingsBackButton")
main_menu = NodePath("..")

[node name="SettingsBackButton" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(80, 80)
offset_left = -496.0
offset_top = -364.0
offset_right = -416.0
offset_bottom = -284.0
theme_override_font_sizes/font_size = 45
text = "<"

[node name="SettingsVBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -496.0
offset_right = 496.0
offset_bottom = 1106.0
grow_horizontal = 2

[node name="MasterLabel" type="Label" parent="SettingsVBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Volume Geral"

[node name="MasterVolumeHBoxContainer" type="HBoxContainer" parent="SettingsVBoxContainer"]
layout_mode = 2

[node name="MasterVolumeHSlider" type="HSlider" parent="SettingsVBoxContainer/MasterVolumeHBoxContainer"]
custom_minimum_size = Vector2(800, 80)
layout_mode = 2
value = 100.0

[node name="MuteMasterCheckBox" type="CheckBox" parent="SettingsVBoxContainer/MasterVolumeHBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
text = "Mute"
expand_icon = true

[node name="MusicLabel" type="Label" parent="SettingsVBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Volume da MÃºsica"

[node name="MusicVolumeHBoxContainer2" type="HBoxContainer" parent="SettingsVBoxContainer"]
layout_mode = 2

[node name="MusicVolumeHSlider" type="HSlider" parent="SettingsVBoxContainer/MusicVolumeHBoxContainer2"]
custom_minimum_size = Vector2(800, 80)
layout_mode = 2
value = 50.0

[node name="MuteMusicCheckBox" type="CheckBox" parent="SettingsVBoxContainer/MusicVolumeHBoxContainer2"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
text = "Mute"
expand_icon = true

[node name="SFXLabel" type="Label" parent="SettingsVBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Volume de Efeitos Sonoros"

[node name="MusicVolumeHBoxContainer3" type="HBoxContainer" parent="SettingsVBoxContainer"]
layout_mode = 2

[node name="SFXVolumeHSlider" type="HSlider" parent="SettingsVBoxContainer/MusicVolumeHBoxContainer3"]
custom_minimum_size = Vector2(800, 80)
layout_mode = 2
value = 50.0

[node name="MuteSFXCheckBox" type="CheckBox" parent="SettingsVBoxContainer/MusicVolumeHBoxContainer3"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
text = "Mute"
expand_icon = true

[node name="MainLabel2" type="Label" parent="SettingsVBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "------------------------------------------------"

[node name="MainLabel3" type="Label" parent="SettingsVBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.439049, 0.439049, 0.439049, 1)
theme_override_font_sizes/font_size = 45
text = "Future settings come here :)"

[node name="Music Handler" type="Node" parent="." node_paths=PackedStringArray("sfx_player", "music_player")]
script = ExtResource("2_wu84c")
sfx_player = NodePath("SFX Player")
music_player = NodePath("Music Player")
startup_sound = ExtResource("3_8ln24")
main_theme = ExtResource("4_rtw2f")

[node name="Music Player" type="AudioStreamPlayer2D" parent="Music Handler"]
position = Vector2(2, 13)
scale = Vector2(1.54229, 1.87636)
bus = &"Music"

[node name="SFX Player" type="AudioStreamPlayer2D" parent="Music Handler"]
position = Vector2(2, 13)
scale = Vector2(1.54229, 1.87636)
bus = &"SFX"

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="pressed" from="MainVBoxContainer/New Game Button" to="MainVBoxContainer/New Game Button" method="_on_pressed"]
[connection signal="pressed" from="MainVBoxContainer/Load Game Button" to="MainVBoxContainer/Load Game Button" method="_on_pressed"]
[connection signal="pressed" from="MainVBoxContainer/Settings Button" to="MainVBoxContainer/Settings Button" method="_on_pressed"]
[connection signal="pressed" from="SettingsBackButton" to="MainVBoxContainer/Settings Button" method="_on_settings_back_button_pressed"]
[connection signal="value_changed" from="SettingsVBoxContainer/MasterVolumeHBoxContainer/MasterVolumeHSlider" to="Music Handler" method="_on_master_volume_h_slider_value_changed"]
[connection signal="toggled" from="SettingsVBoxContainer/MasterVolumeHBoxContainer/MuteMasterCheckBox" to="Music Handler" method="_on_mute_master_check_box_toggled"]
[connection signal="value_changed" from="SettingsVBoxContainer/MusicVolumeHBoxContainer2/MusicVolumeHSlider" to="Music Handler" method="_on_music_volume_h_slider_value_changed"]
[connection signal="toggled" from="SettingsVBoxContainer/MusicVolumeHBoxContainer2/MuteMusicCheckBox" to="Music Handler" method="_on_mute_music_check_box_toggled"]
[connection signal="value_changed" from="SettingsVBoxContainer/MusicVolumeHBoxContainer3/SFXVolumeHSlider" to="Music Handler" method="_on_sfx_volume_h_slider_value_changed"]
[connection signal="toggled" from="SettingsVBoxContainer/MusicVolumeHBoxContainer3/MuteSFXCheckBox" to="Music Handler" method="_on_mute_sfx_check_box_toggled"]
